# aoc24

./: Cargo.toml  out.txt
crates/day1/: Cargo.toml
crates/day1/src/: main.rs
crates/day10/: Cargo.toml
crates/day10/src/: main.rs
crates/day11/: Cargo.toml
crates/day11/src/: main.rs
crates/day12/: Cargo.toml
crates/day12/src/: main.rs
crates/day13/: Cargo.toml
crates/day13/src/: main.rs
crates/day14/: Cargo.toml
crates/day14/src/: main.rs
crates/day15/: Cargo.toml
crates/day15/src/: main.rs
crates/day16/: Cargo.toml
crates/day16/src/: main.rs
crates/day17/: Cargo.toml
crates/day17/src/: main.rs
crates/day18/: Cargo.toml
crates/day18/src/: main.rs
crates/day19/: Cargo.toml
crates/day19/src/: main.rs
crates/day2/: Cargo.toml
crates/day2/src/: main.rs
crates/day20/: Cargo.toml
crates/day20/src/: main.rs
crates/day21/: Cargo.toml
crates/day21/src/: main.rs
crates/day22/: Cargo.toml
crates/day22/src/: main.rs
crates/day23/: Cargo.toml
crates/day23/src/: main.rs
crates/day24/: Cargo.toml
crates/day24/src/: main.rs
crates/day3/: Cargo.toml
crates/day3/src/: main.rs
crates/day4/: Cargo.toml
crates/day4/src/: main.rs
crates/day5/: Cargo.toml
crates/day5/src/: main.rs
crates/day6/: Cargo.toml
crates/day6/src/: main.rs
crates/day7/: Cargo.toml
crates/day7/src/: main.rs
crates/day8/: Cargo.toml
crates/day9/: Cargo.toml
crates/day9/src/: main.rs
crates/dayX/: Cargo.toml
crates/dayX/src/: main.rs
crates/utilities/: Cargo.toml
crates/utilities/src/: lib.rs
